# PyCellProtocol

./: .gitignore  README.md  pyproject.toml  upstream-lock.json
.github/workflows/: upstream-sync.yml
docs/: upstream-sync.md
scripts/: check_upstream_relevance.py  swift_parity_smoke.py  update_upstream_lock.py
src/cellprotocol/: __init__.py  bridge.py  configuration.py  general_cell.py  identity.py  keypath.py  protocols.py  resolver.py  value.py
src/cellprotocol/cells/: __init__.py  entity_anchor.py  function_cell.py  graph.py  graph_metrics_compare.py  structural_value_profile.py  trusted_issuers.py  vault.py
src/cellprotocol_scaffold/: __init__.py  app.py  cli.py  entity_anchor_data.py  registry.py
tests/: test_bridge_scaffold.py  test_cells.py  test_identity_security.py  test_keypath_resolver.py  test_upstream_relevance.py  test_wire_codecs.py
tests/fixtures/: swift_identity_description_command.json
