[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pycellprotocol"
version = "0.1.0"
description = "Python implementation of HAVEN CellProtocol core contracts and scaffold bridge"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
scaffold = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "websockets>=14",
]
crypto = [
  "cryptography>=42",
]
dev = [
  "pytest>=8",
]

[project.scripts]
pycell = "cellprotocol_scaffold.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cellprotocol", "src/cellprotocol_scaffold"]
